testing/error/misnamedRotor.inp
* Y BETA VIII V I FDBN
Crashing, hit a wall
Right now I need a miracle
Hurry up now, I need a miracle
Stranded, reaching out
I call your name but you're not around
I say your name but you're not around